Move inline styles to external styles.css

--- a/public/index.html
+++ b/public/index.html
@@ -4,181 +4,8 @@
   <meta charset="UTF-8" />
   <title>Guess The Future</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-    }
-    body {
-      margin: 0;
-      background: #0f172a;
-      color: #e5e7eb;
-    }
-    #app {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 16px;
-    }
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 16px;
-    }
-    header h1 {
-      margin: 0;
-      font-size: 24px;
-    }
-    header small {
-      color: #9ca3af;
-      font-size: 12px;
-    }
-    main {
-      display: grid;
-      grid-template-columns: 1.1fr 1.3fr;
-      gap: 16px;
-    }
-    section {
-      background: #111827;
-      border-radius: 12px;
-      padding: 12px 16px;
-      border: 1px solid #1f2937;
-    }
-    h2 {
-      margin-top: 0;
-      font-size: 18px;
-      margin-bottom: 8px;
-    }
-    h3 {
-      margin-top: 8px;
-      font-size: 15px;
-      margin-bottom: 6px;
-    }
-    label {
-      display: block;
-      font-size: 13px;
-      margin-bottom: 4px;
-    }
-    input, textarea, select, button {
-      width: 100%;
-      padding: 6px 8px;
-      border-radius: 8px;
-      border: 1px solid #374151;
-      background: #020617;
-      color: #e5e7eb;
-      font-size: 13px;
-    }
-    input:focus, textarea:focus, select:focus {
-      outline: 1px solid #4f46e5;
-      border-color: #4f46e5;
-    }
-    textarea {
-      min-height: 80px;
-      resize: vertical;
-    }
-    button {
-      margin-top: 8px;
-      cursor: pointer;
-      font-weight: 500;
-      background: #4f46e5;
-      border-color: #4f46e5;
-      transition: background 0.15s ease, transform 0.05s ease;
-    }
-    button:hover {
-      background: #6366f1;
-    }
-    button:active {
-      transform: scale(0.98);
-    }
-    .row {
-      display: flex;
-      gap: 8px;
-    }
-    .row > div {
-      flex: 1;
-    }
-    .small {
-      font-size: 12px;
-      color: #9ca3af;
-    }
-    .message {
-      font-size: 12px;
-      margin-top: 4px;
-      min-height: 16px;
-    }
-    .message.error {
-      color: #f97373;
-    }
-    .message.success {
-      color: #4ade80;
-    }
-    #user-info {
-      font-size: 13px;
-      text-align: right;
-    }
-    #logout-btn {
-      width: auto;
-      padding-inline: 10px;
-      font-size: 12px;
-      margin-top: 4px;
-    }
-    .disabled {
-      opacity: 0.5;
-    }
-    #feed-list,
-    #my-predictions-list,
-    #following-list {
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      max-height: 480px;
-      overflow-y: auto;
-      padding-right: 4px;
-    }
+  <link rel="stylesheet" href="styles.css" />
 
-
-    .feed-item {
-      border-radius: 10px;
-      border: 1px solid #1f2937;
-      padding: 8px 10px;
-      background: #020617;
-    }
-    .feed-header {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 6px;
-      font-size: 12px;
-      color: #9ca3af;
-      margin-bottom: 4px;
-    }
-    .feed-user {
-      font-weight: 600;
-      color: #e5e7eb;
-    }
-    .feed-category {
-      padding: 1px 6px;
-      border-radius: 999px;
-      background: #111827;
-      border: 1px solid #1f2937;
-      font-size: 11px;
-    }
-    .feed-date {
-      font-size: 11px;
-    }
-    .feed-content {
-      font-size: 13px;
-      margin-bottom: 4px;
-    }
-    .feed-footer {
-      font-size: 11px;
-      color: #9ca3af;
-    }
-    @media (max-width: 800px) {
-      main {
-        grid-template-columns: 1fr;
-      }
-    }
-  </style>
 </head>
 <body>
   <div id="app">
