Add basic DM messaging system and clean app structure

--- a/public/index.html
+++ b/public/index.html
@@ -94,6 +94,22 @@
           </div>
         </section>
 
+        <section id="dm-section">
+          <h2>Mesajlaşma</h2>
+          <div id="dm-selected-user" class="small">
+            Henüz bir kullanıcı seçmediniz. Sağ taraftan "Takip ettiklerim" listesinden birini seçip mesajlaşabilirsiniz.
+          </div>
+          <div id="dm-messages">
+            <p class="small">Mesaj yok.</p>
+          </div>
+          <form id="dm-form">
+            <label for="dm-input">Mesajınız</label>
+            <textarea id="dm-input" placeholder="Bir mesaj yazın..." required></textarea>
+            <button type="submit">Gönder</button>
+          </form>
+          <div id="dm-message-status" class="message"></div>
+        </section>
+
       </div>
 
       <!-- Sağ taraf: Feed -->
