Show opened predictions on user profile page

--- a/public/index.html
+++ b/public/index.html
@@ -89,10 +89,18 @@
 
         <section id="profile-section">
           <h2>Profil</h2>
-          <div id="profile-details">
-            <p class="small">Bir kullanıcı seçmek için sağ taraftan takip ettiklerine tıklayın.</p>
-          </div>
+            <div id="profile-details">
+              <p class="small">
+                Bir kullanıcı seçmek için sağ taraftan takip ettiklerinize tıklayın.
+              </p>
+            </div>
+            <div id="profile-predictions">
+              <p class="small">
+                Bu kullanıcının açılmış tahminleri burada görünecek.
+              </p>
+            </div>
         </section>
+
 
         <section id="dm-section">
           <h2>Mesajlaşma</h2>
