WIP: prediction detail panel and filters

--- a/public/index.html
+++ b/public/index.html
@@ -169,6 +169,16 @@
             <p class="small">Henüz tahmininiz yok.</p>
           </div>
         </section>
+
+        <section id="prediction-detail-section">
+  <h2>Seçili tahmin detayı</h2>
+  <div id="prediction-detail">
+    <p class="small">
+      Bir tahmine tıklayarak detayını burada görebilirsiniz.
+    </p>
+  </div>
+</section>
+
       </div>
 
 
