Add profile follow, explore users and my stats card

--- a/public/index.html
+++ b/public/index.html
@@ -155,14 +155,20 @@
             <select id="my-predictions-filter-category">
               <option value="">Tüm kategoriler</option>
               <!-- JS ile dolduracağız -->
-            </select>
+        </select>
+        <section class="card">
+          <h3>Benim istatistiklerim</h3>
+          <div id="my-stats" class="small">
+            Henüz yüklenmedi.
+          </div>
+        </section>
 
-            <select id="my-predictions-filter-status">
+        <select id="my-predictions-filter-status">
               <option value="">Tüm durumlar</option>
               <option value="pending">Bekliyor</option>
               <option value="correct">Doğru</option>
               <option value="incorrect">Yanlış</option>
-            </select>
+        </select>
 
             <button id="my-predictions-clear-filters" type="button">
               Temizle
