Disable native validation on prediction form

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
 
           <section class="card new-prediction-card">
             <h2>Yeni tahmin</h2>
-            <form id="prediction-form" class="stack-form">
+            <form id="prediction-form" class="stack-form" novalidate>
               <label for="prediction-title">Başlık</label>
               <input
                 id="prediction-title"
