Improve comment form UX (validation & loading)

--- a/public/index.html
+++ b/public/index.html
@@ -330,7 +330,7 @@
               </div>
 
               <!-- form'a stack-form class'ı ekledik -->
-              <form id="comment-form" class="stack-form">
+              <form id="comment-form" class="stack-form" novalidate>
                 <label for="comment-content">Yorum yaz</label>
                 <textarea
                   id="comment-content"
