Improve My Predictions UX (summary, cards, filters)

--- a/public/index.html
+++ b/public/index.html
@@ -220,7 +220,7 @@
               </div>
             </div>
 
-
+            <div id="my-predictions-summary" class="small subtle"></div>
             <div id="my-predictions-list" class="list"></div>
           </section>
 
